--- a/dockerFile
+++ b/dockerFile
@@ -1,11 +1,8 @@
-# Use an official Node.js runtime as the base image
-FROM node:21
+# Use the official Playwright Docker image
+FROM mcr.microsoft.com/playwright:v1.31.0-focal
 
-# Set the working directory inside the container
-WORKDIR /app
-
-# Remove NPM cache and node_modules
-RUN rm -rf /root/.npm /app/node_modules
+# Set the working directory
+WORKDIR /src
 
 # Copy package.json and package-lock.json to the working directory
 COPY package*.json ./
@@ -13,11 +10,8 @@ COPY package*.json ./
 # Install dependencies
 RUN npm install
 
-# Copy the rest of your project files to the working directory
+# Copy the rest of the project files to the working directory
 COPY . .
 
-# Set environment variable to run tests headlessly
-ENV CYPRESS_ENV=ci
-
-# Run the tests when the container starts
-CMD ["npx" ,"cypress", "run"]
+# Define the command to run Playwright tests
+CMD ["npm", "run", "test"]
